hphp/hack/test/typecheck/require_strict.php.exp
File "require_strict.php", line 2, characters 1-25:
Toplevel statements are not allowed. Use __EntryPoint attribute instead (Parsing[1002])
